SK-1 - Prepare branch

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.developerbhuwan.spring.knight</groupId>
     <artifactId>spring-knight-parent</artifactId>
-    <version>1.0.0.BUILD-SNAPSHOT</version>
+    <version>1.0.0.SK-1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Spring Knight</name>
