--- a/spring-knight-core/pom.xml
+++ b/spring-knight-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>spring-knight-parent</artifactId>
         <groupId>io.developerbhuwan.spring.knight</groupId>
-        <version>1.0.0.BUILD-SNAPSHOT</version>
+        <version>1.0.0.SK-1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
